# diploma

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO  build_debug.bat  compile_commands.json  dip.pptx  run_tests.bat
cmake/: cmake_utils.cmake  deps.cmake
fonts/Raleway ExtraLight/: readme.html
saves/: Куб  Название задачи  Октаэдр  Параллепипед  Параллепипед и цилиндр  Призмы  Усеченная пирамида
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/include/: app.hpp
src/app/include/app/: app.hpp
src/app/src/: app.cpp  main.cpp
src/common/: CMakeLists.txt  colors.hpp  definitions.hpp  overloaded.hpp  widgets_ids.hpp
src/geometry/: CMakeLists.txt
src/geometry/include/geometry/: edge.hpp  face.hpp  halfedge.hpp  halfedge_mesh.hpp  line.hpp  mesh.hpp  plane.hpp  vertex.hpp
src/geometry/src/: halfedge_mesh.cc  mesh.cc
src/glad/: CMakeLists.txt
src/glad/include/: glad.hpp
src/glad/src/: glad.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: Problem.hpp  editor.hpp  gui.hpp  layout.hpp  model.hpp  view.hpp  widgets.hpp
src/gui/src/: editor.cc  gui.cc  layout.cc  model.cc  view.cc  widgets.cc
src/interfaces/: CMakeLists.txt  event.hpp  gui.hpp  gui_interface.hpp  window.hpp  window_interface.hpp
src/math/: CMakeLists.txt
src/math/include/: math.hpp
src/math/include/math/: common.hpp  mat4x4.hpp  quat.hpp  transforms.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/math/src/: mat4x4.cc  transforms.cc  vec2.cc  vec3.cc  vec4.cc
src/opengl/: CMakeLists.txt
src/opengl/include/: mesh.hpp  opengl.hpp  shader.hpp  tex2D.hpp
src/opengl/include/opengl/: effects.hpp  framebuffer.hpp  instance.hpp  lines.hpp  opengl.hpp  shader.hpp
src/opengl/src/: effects.cc  framebuffer.cc  graphic.cpp  instance.cc  lines.cc  mesh.cc  opengl.cpp  platform.cpp  shader.cpp  tex2D.cc
src/platform/: CMakeLists.txt
src/platform/include/: framebuffer.hpp  graphic.hpp  platform.hpp  shader.hpp  tex2D.hpp  window.hpp
src/platform/src/: graphic.cpp  platform.cpp  shader.cpp  tex2D.cc  window.cpp
src/scene/: CMakeLists.txt
src/scene/include/scene/: item.hpp  object.hpp  pose.hpp  renderer.hpp  scene.hpp
src/scene/src/: item.cc  object.cc  pose.cc  renderer.cc  scene.cc
src/sdl_window/: CMakeLists.txt
src/sdl_window/include/sdl_window/: event.hpp  window.hpp
src/sdl_window/include/window/: sdl_window.hpp
src/sdl_window/src/: sdl_window.cc
src/utils/: CMakeLists.txt
src/utils/include/: camera.hpp  log.hpp
src/utils/include/utils/: camera.hpp  generate_primitives.hpp  log.hpp  primitives.hpp
src/utils/src/: camera.cc  generate_primitives.cc  log.cpp  primitives.cc  stb_loader.cc
tests/: CMakeLists.txt  constexpr_tests.cpp  geometry_tests.cc  halfedge_tests.cpp  math_tests.cpp  new_math_tests.cpp
